robballen75-Salesforce/4-7-15/src/objects/Web_Page_Access__c.object
<CustomObject>
    <description>Used by Marketing to import data about which web pages are accessed by account contacts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Pages Access</relationshipLabel>
        <relationshipName>Web_Pages_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Access__c</fullName>
        <label>Date of Access</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Page_s_Visited__c</fullName>
        <label>Web Page(s) Visited</label>
        <picklist>
            <picklistValues>
                <fullName>Product Page - EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Page - 3BClean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Page - DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar Page - EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar Page - 3BClean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar Page - DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource - Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource - White Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inquiry - Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inquiry - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inquiry - Eval Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Web Page Access</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{0000000}</displayFormat>
        <label>Web Page Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Pages Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>